--- a/exercise_tracker_prototype/backend/package.json
+++ b/exercise_tracker_prototype/backend/package.json
@@ -1,33 +1,1 @@
-{
-    
-"name": "backend",
-    
-"version": "1.0.0",
-    
-"main": "server.js",
-    
-"scripts": {
-    
-    
-"test": "echo \"Error: no test specified\" && exit 1",
-    
-    
-"start": "node server.js"
-    
-},
-    
-"keywords": [],
-    
-"author": "",
-    
-"license": "ISC",
-    
-"description": "",
-    
-"dependencies": {
-    
-    
-"express": "^5.1.0"
-    
-}
-}
+{"name":"backend","version":"1.0.0","main":"server.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node server.js","dev":"npx nodemon server.js"},"keywords":[],"author":"","license":"ISC","description":"","dependencies":{"dotenv":"^16.5.0","express":"^5.1.0","mongoose":"^8.13.2"}}
