--- a/exercise_tracker_prototype/frontend/package.json
+++ b/exercise_tracker_prototype/frontend/package.json
@@ -37,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "options": {
+    "allowedHosts": ["localhost", ".localhost"],
+    "proxy": "http://localhost:4000"
   }
 }
