--- a/exercise_tracker_prototype/backend/package.json
+++ b/exercise_tracker_prototype/backend/package.json
@@ -3,17 +3,19 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js",
-      "dev": "npx nodemon server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "dev": "npx nodemon server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-      "dotenv": "^16.5.0",
-      "express": "^5.1.0",
-      "mongoose": "^8.13.2"
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "mongoose": "^8.13.2",
+        "validator": "^13.15.0"
     }
-  }
+}
