--- a/task_manager_prototype/frontend/package.json
+++ b/task_manager_prototype/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "http-proxy-middleware": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
