--- a/course_explorer_prototype/frontend/package.json
+++ b/course_explorer_prototype/frontend/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "css-loader": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
