--- a/course_explorer/frontend/package.json
+++ b/course_explorer/frontend/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "Webpack": "npm:webpack@^5.99.9"
   }
 }
