--- a/course_explorer/frontend/package.json
+++ b/course_explorer/frontend/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
@@ -21,11 +25,15 @@
     "@babel/plugin-transform-runtime": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@tailwindcss/postcss": "^4.1.10",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "style-loader": "^4.0.0",
     "Webpack": "npm:webpack@^5.99.9"
   }
 }
